# KineticScan

./: .clang-format  .gitmodules  LICENSE  README.md  kinect2blender.py  make.bat  makelist.bat  meson.build  meson_options.txt  receiver.py  sender.py
include/: meson.build
kineticpy/: bytestream.py  kinect2blender.py  kinetic.py  kineticblender.py  socketstream.py
src/: debug.cpp  debug.h  main.cpp  main.hpp  meson.build  nogui.cpp  openvr_wrapper.cpp  openvr_wrapper.hpp
subprojects/: .gitignore  lak.wrap  openvr.wrap
